# eleRobotJPS

./: .gitmodules  LICENSE  README.md
devel/: .catkin  (+2 more)
src/elephant/elerobot_simple_control/: CMakeLists.txt  package.xml
src/elephant/elerobot_simple_control/launch/: elerobot_gazebo_states.launch  elerobot_gazebo_world.launch  elerobot_toplevel_moveit.launch  elerobot_trajectory_controller.launch
src/elephant/rokae_jps_navigation/: CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml
src/elephant/rokae_jps_navigation/config/: rokae_config_JPS.yaml
src/elephant/rokae_jps_navigation/docs/html/: annotated.html  annotated_dup.js  classIKSolver-members.html  classIKSolver.html  classJPSPlanner-members.html  classJPSPlanner.html  classJPSPlanner.js  classJPSPlanner_a029a925cd8cf9f94ac43a171df95a495_icgraph.map  classJPSPlanner_a029a925cd8cf9f94ac43a171df95a495_icgraph.md5  classJPSPlanner_a075a20b219367990afe00b1e52055c91_cgraph.map  classJPSPlanner_a075a20b219367990afe00b1e52055c91_cgraph.md5  classJPSPlanner_a075a20b219367990afe00b1e52055c91_icgraph.map  classJPSPlanner_a075a20b219367990afe00b1e52055c91_icgraph.md5  classJPSPlanner_a0cdb228e394e4d06ab198544b4df7193_icgraph.map  classJPSPlanner_a0cdb228e394e4d06ab198544b4df7193_icgraph.md5  classJPSPlanner_a1657ba9a5c10fe6f64ddebc0b2fd822b_cgraph.map  classJPSPlanner_a1657ba9a5c10fe6f64ddebc0b2fd822b_cgraph.md5  classJPSPlanner_a1657ba9a5c10fe6f64ddebc0b2fd822b_icgraph.map  classJPSPlanner_a1657ba9a5c10fe6f64ddebc0b2fd822b_icgraph.md5  classJPSPlanner_a24cfb29792e3e85204b32a912b6392a8_icgraph.map  classJPSPlanner_a24cfb29792e3e85204b32a912b6392a8_icgraph.md5  classJPSPlanner_a32d286fdb27a28782c95abbcd2c78af9_cgraph.map  classJPSPlanner_a32d286fdb27a28782c95abbcd2c78af9_cgraph.md5  classJPSPlanner_a3dbb82751d64a4d36dd238177835f136_icgraph.map  classJPSPlanner_a3dbb82751d64a4d36dd238177835f136_icgraph.md5  classJPSPlanner_a43a70715e3ed4371d6bc2392f40ada04_icgraph.map  classJPSPlanner_a43a70715e3ed4371d6bc2392f40ada04_icgraph.md5  classJPSPlanner_a46daa32c486ab9c67d01b05fc47462ad_cgraph.map  classJPSPlanner_a46daa32c486ab9c67d01b05fc47462ad_cgraph.md5  classJPSPlanner_a46daa32c486ab9c67d01b05fc47462ad_icgraph.map  classJPSPlanner_a46daa32c486ab9c67d01b05fc47462ad_icgraph.md5  classJPSPlanner_a528622cf0f6cf45408be2f26066ade6a_cgraph.map  classJPSPlanner_a528622cf0f6cf45408be2f26066ade6a_cgraph.md5  classJPSPlanner_a528622cf0f6cf45408be2f26066ade6a_icgraph.map  classJPSPlanner_a528622cf0f6cf45408be2f26066ade6a_icgraph.md5  classJPSPlanner_a588206aa9b294c811c08702cca9ca75b_icgraph.map  classJPSPlanner_a588206aa9b294c811c08702cca9ca75b_icgraph.md5  classJPSPlanner_a5914475d621e68ae40dd973194112051_icgraph.map  classJPSPlanner_a5914475d621e68ae40dd973194112051_icgraph.md5  classJPSPlanner_a6272866f45ec5cc13c168e688a117645_icgraph.map  (+370 more)
src/elephant/rokae_jps_navigation/include/JPS_Basis/: rokae_jps_basis.hpp
src/elephant/rokae_jps_navigation/include/JPS_Modules/: rokae_arm_main.hpp  rokae_collision_detection.hpp
src/elephant/rokae_jps_navigation/include/JPS_Planner/: rokae_graph_basis.hpp  rokae_jps_planner.hpp
src/elephant/rokae_jps_navigation/launch/: rokae_arm_navigation_JPS.launch
src/elephant/rokae_jps_navigation/share/: joint_configs.txt
src/elephant/rokae_jps_navigation/share/1650184660/: JPS_coords_path1650184660.txt
src/elephant/rokae_jps_navigation/share/1650198263/: JPS_coords_path1650198263.txt
src/elephant/rokae_jps_navigation/share/1650199119/: JPS_coords_path1650199119.txt
src/elephant/rokae_jps_navigation/share/1650204668/: JPS_coords_path1650204668.txt
src/elephant/rokae_jps_navigation/share/1650205785/: JPS_coords_path1650205785.txt
src/elephant/rokae_jps_navigation/share/1650206216/: JPS_coords_path1650206216.txt
src/elephant/rokae_jps_navigation/share/1650206580/: JPS_coords_path1650206580.txt
src/elephant/rokae_jps_navigation/share/1650206993/: JPS_coords_path1650206993.txt
src/elephant/rokae_jps_navigation/share/1650279809/: JPS_coords_path1650279809.txt
src/elephant/rokae_jps_navigation/share/1652596648/: JPS_coords_path1652596648.txt
src/elephant/rokae_jps_navigation/share/1652835779/: JPS_coords_path1652835779.txt
src/elephant/rokae_jps_navigation/share/1652839783/: JPS_coords_path1652839783.txt
src/elephant/rokae_jps_navigation/srv/: CheckCollision.srv  Goto.srv  eefState.srv  joint2pose.srv
src/elephant/rokae_pick_place_with_vacuum_gripper/: CMakeLists.txt  package.xml
src/elephant/rokae_pick_place_with_vacuum_gripper/src/: vacuum_gripper_control_client.cpp  vacuum_gripper_control_server.cpp
src/elephant/rokae_pick_place_with_vacuum_gripper/srv/: GripperState.srv
(+687 files in other folders)
